date: 29/10/2025 UI Trang chu + UI thong tin'

--- a/src/cong_cu/Card/Card.module.scss
+++ b/src/cong_cu/Card/Card.module.scss
@@ -14,20 +14,35 @@
 
 .wrapper-small {
     width: 50%;
+    min-height: 200px;
+    overflow-y: hidden;
+    border: 1px solid rgb(128, 34, 34);
+    border-radius: 10px;
+    display: flex;
+    justify-content: flex-start;
+    box-shadow: 0 0 15px rgba(199, 182, 182, 0.8);
+    margin: 12px 24px;
+}
+
+
+.wrapper-square {
+    flex: 0 0 auto;
+    width: 200px;
     height: 200px;
     max-height: 200px;
     overflow-y: auto;
     border: 1px solid rgb(128, 34, 34);
     border-radius: 10px;
     display: flex;
-    justify-content: center;
+    justify-content: flex-start;
     box-shadow: 0 0 15px rgba(199, 182, 182, 0.8);
     margin: 12px 24px;
 }
 
+
 .wrapper-content {
     width: 100%;
-    min-height: 300px;
+    min-height: 200px;
     overflow-y: auto;
     overflow-x: auto;
     border: 1px solid rgb(128, 34, 34);
