--- a/src/assets/GlobalStyle/GlobalStyle.scss
+++ b/src/assets/GlobalStyle/GlobalStyle.scss
@@ -4,6 +4,7 @@
     box-sizing: border-box;
     padding: 0;
     margin: 0;
+    scrollbar-gutter: stable;
 
     //var global
     --height-header: 80px;
