--- a/src/components/Thong_tin/Thong_tin.module.scss
+++ b/src/components/Thong_tin/Thong_tin.module.scss
@@ -1,7 +1,6 @@
 .wrapper {
     display: flex;
     flex-direction: row;
-    justify-content: center;
-    justify-content: space-between;
+    justify-content: space-around;
     margin: 12px
 }
