--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -1,8 +1,17 @@
+*{
+    box-sizing: border-box;
+    margin: 0;
+    padding: 0;
+
+    --primary: red;
+    --good: green;
+}
+
+
 .wrapper {
     display: flex;
     flex-direction: column;
     justify-content: space-between;
-    overflow-y: auto ;
 }
 
 .container {
@@ -20,6 +29,7 @@
     flex-direction: column;
     border-right: 1px solid rgb(233, 233, 221);
     overflow-y: auto;
+    flex-shrink: 0;
 
     position: sticky;
     top: var(--default-layout-header-height);
