Update UI Muc chi tieu

--- a/src/cong_cu/Card/Card.module.scss
+++ b/src/cong_cu/Card/Card.module.scss
@@ -53,6 +53,7 @@
     box-shadow: 0 0 15px rgba(199, 182, 182, 0.8);
     margin: 0 12px;
     margin-top: 24px;
+    overflow-x: hidden;
 }
 
 .wrapper-content-items-center {
