date: 02/11/2025 demo UI #1

--- a/src/cong_cu/Card/Card.module.scss
+++ b/src/cong_cu/Card/Card.module.scss
@@ -1,4 +1,5 @@
 .wrapper-small-long {
+    position: relative;
     width: 80%;
     height: 200px;
     max-height: 200px;
@@ -12,6 +13,7 @@
 }
 
 .wrapper-small {
+    position: relative;
     width: 50%;
     min-height: 200px;
     overflow-y: hidden;
@@ -25,6 +27,7 @@
 
 
 .wrapper-square {
+    position: relative;
     flex: 0 0 auto;
     width: 200px;
     height: 200px;
@@ -41,6 +44,7 @@
 
 
 .wrapper-content {
+    position: relative;
     width: 100%;
     min-height: 200px;
     overflow-y: auto;
@@ -57,6 +61,7 @@
 }
 
 .wrapper-content-items-center {
+    position: relative;
     width: 100%;
     min-height: 200px;
     overflow-y: auto;
@@ -74,5 +79,19 @@
     display: block;
 }
 
-
-
+.wrapper-content-dinh-muc {
+    position: relative;
+    width: 100%;
+    min-height: 470px;
+    overflow-y: auto;
+    overflow-x: auto;
+    border: 1px solid rgb(128, 34, 34);
+    border-radius: 10px;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    box-shadow: 0 0 15px rgba(199, 182, 182, 0.8);
+    margin: 0 12px;
+    margin-top: 24px;
+    overflow-x: hidden;
+}
