--- a/src/cong_cu/Card/Card.module.scss
+++ b/src/cong_cu/Card/Card.module.scss
@@ -95,3 +95,19 @@
     margin-top: 24px;
     overflow-x: hidden;
 }
+
+.wrapper-square-big {
+    position: relative;
+    flex: 0 0 auto;
+    width: 400px;
+    height: auto;
+    min-height: auto;
+    max-height: auto;
+    overflow-y: auto;
+    border: 1px solid rgb(128, 34, 34);
+    border-radius: 10px;
+    display: flex;
+    justify-content: flex-start;
+    box-shadow: 0 0 15px rgba(199, 182, 182, 0.8);
+    margin: 12px 24px;
+}
