date: 07/11/2025 ui Thong tin + fix css

--- a/src/components/Thong_tin/Thong_tin.module.scss
+++ b/src/components/Thong_tin/Thong_tin.module.scss
@@ -4,3 +4,12 @@
     justify-content: space-around;
     margin: 12px
 }
+
+.text-content{
+    margin: 10px 24px;
+    
+    span{
+        border-bottom: 1px solid wheat;
+        color: green;
+    }
+}
