--- a/src/components/Dinh_muc/Dinh_muc.module.scss
+++ b/src/components/Dinh_muc/Dinh_muc.module.scss
@@ -28,7 +28,7 @@
 }
 
 .thong-bao {
-    margin: 24px 24px;
+    margin: 0px 24px;
     width: 100%;
 
     h1 {
@@ -41,17 +41,59 @@
     }
 }
 
+.body-thong-bao {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    margin-left: -24px;
+}
+
+.lich-su {
+    margin-left: 3%;
+    width: 97%;
+
+    h1 {
+        font-weight: 1000;
+        margin-bottom: 24px;
+        margin-top: 24px;
+        padding-bottom: 24px;
+        border-bottom: 3px solid wheat;
+        margin-left: 6px;
+    }
+}
+
+.text-lich-su {
+    margin: 24px 24px;
+    font-size: 16px;
+
+
+    .text-inline-lich-su {
+        border-bottom: 1px solid wheat;
+        margin: 16px 0;
+        font-weight: 600;
+        color: rgb(139, 17, 17);
+    }
+
+    span {
+        margin: 24px 12px;
+        color: rgb(9, 12, 9);
+        font-weight: 600;
+
+    }
+}
+
+
 .content-warning {
     border-top: 3px solid wheat;
     display: flex;
 }
 
-.text-content{
+.text-content {
     display: flex;
     flex-direction: column;
 
-    p{
-        margin: 12px 12px;
+    span {
+        margin: 0px 12px;
     }
 }
 
