--- a/src/components/Muc_chi_tieu/Muc_chi_tieu_giai_tri/Muc_chi_tieu_giai_tri.module.scss
+++ b/src/components/Muc_chi_tieu/Muc_chi_tieu_giai_tri/Muc_chi_tieu_giai_tri.module.scss
@@ -4,3 +4,13 @@
     justify-content: space-around;
     margin: 12px 12px;
 }
+
+.wrapper-content{
+    margin: 12px 12px;
+    color: rgb(175, 49, 49);
+    border-bottom: 1px wheat solid;
+    span{
+        margin: 12px 0;
+        color: rgb(11, 14, 12);
+    }
+}
