--- a/src/components/Trang_chu/Trang_chu.module.scss
+++ b/src/components/Trang_chu/Trang_chu.module.scss
@@ -11,3 +11,11 @@
     display: flex;
     flex-direction: row;
 }
+
+.warning {
+    display: block;
+    align-content: center;
+    margin-left: 15%;
+    font-weight: 600;
+    color: red;
+}
