--- a/src/Tro_nang/Them_sua_xoa_khac/Them_sua_xoa_khac.module.scss
+++ b/src/Tro_nang/Them_sua_xoa_khac/Them_sua_xoa_khac.module.scss
@@ -49,6 +49,22 @@
 
 }
 
+.input-layout {
+    width: 100%;
+    box-shadow: 0 0 12px rgb(185, 183, 179);
+    height: 32px;
+    border-radius: 12px;
+    margin-bottom: 10px;
+    padding: 4px 4px;
+    transition: linear 0.5s;
+
+    &:focus {
+        background-color: rgba(94, 255, 1, 0.1);
+        transform: translateX(-2px);
+        transform: translateY(+2px);
+    }
+}
+
 .input-content {
     width: 90%;
     margin: 24px 24px;
@@ -96,5 +112,3 @@
         transform: scale(1);
     }
 }
-
-
