--- a/src/components/Dinh_muc/Dinh_muc.module.scss
+++ b/src/components/Dinh_muc/Dinh_muc.module.scss
@@ -72,12 +72,19 @@
         margin: 16px 0;
         font-weight: 600;
         color: rgb(139, 17, 17);
+
+        &:hover {
+            transform: scale(1.05);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+            z-index: 10;
+        }
     }
 
     span {
         margin: 24px 12px;
         color: rgb(9, 12, 9);
         font-weight: 600;
+
 
     }
 }
@@ -94,22 +101,44 @@
 
     span {
         margin: 0px 12px;
+        word-wrap: break-word;
+        word-break: break-word;
+    }
+}
+
+.input-layout {
+    width: 100%;
+    box-shadow: 0 0 12px rgb(185, 183, 179);
+    height: 32px;
+    border-radius: 12px;
+    margin-bottom: 10px;
+    padding: 4px 4px;
+    transition: linear 0.5s;
+
+    &:focus {
+        background-color: rgba(94, 255, 1, 0.1);
+        transform: translateX(-2px);
+        transform: translateY(+2px);
     }
 }
 
 .btn {
     margin-top: 10px;
-    border: 1px solid green;
-    border-radius: 6000px;
-    padding: 12px 12px;
-    cursor: pointer;
+    padding: 12px 24px;
+    border: 1px solid #16a34a;
+    border-radius: 9999px;
+    background: linear-gradient(145deg, #f0fff0, #d1f7d1);
+    color: #166534;
     font-weight: 600;
+    cursor: pointer;
+    box-shadow: 0 4px 8px rgba(0, 128, 0, 0.2);
+    transition: all 0.3s ease;
 
     &:hover {
-        font-weight: 600;
-        background-color: greenyellow;
-        color: rgb(223, 13, 13);
-        transition: linear 0.3s;
-        border: 1px solid rgb(219, 13, 23);
+        background: linear-gradient(145deg, #b9ff66, #9ef01a);
+        color: #222;
+        border-color: #28a745;
+        box-shadow: 0 8px 20px rgba(0, 128, 0, 0.3);
+        transform: translateY(-2px);
     }
 }
