--- a/src/components/Muc_chi_tieu/Muc_chi_tieu_khac/Muc_chi_tieu_khac.module.scss
+++ b/src/components/Muc_chi_tieu/Muc_chi_tieu_khac/Muc_chi_tieu_khac.module.scss
@@ -5,12 +5,19 @@
     margin: 12px 12px;
 }
 
-.wrapper-content{
+.wrapper-content {
     margin: 12px 12px;
     color: rgb(175, 49, 49);
     border-bottom: 1px wheat solid;
-    span{
+
+    span {
         margin: 12px 0;
         color: rgb(11, 14, 12);
+    }
+
+    &:hover {
+        transform: scale(1.05);
+        box-shadow: 0 4px 12px rgba(0, 0, 0, 0.2);
+        z-index: 10;
     }
 }
