--- a/src/cong_cu/Text_chi_tieu/Text_chi_tieu.module.scss
+++ b/src/cong_cu/Text_chi_tieu/Text_chi_tieu.module.scss
@@ -73,7 +73,7 @@ label {
     font-size: 18px
 }
 
-input {
+.input-layout {
     width: 100%;
     box-shadow: 0 0 12px rgb(185, 183, 179);
     height: 32px;
