--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -40,7 +40,7 @@
     position: relative;
     flex: 7;
     max-height: 1000px;
-    background-color: rgb(255, 255, 255);
+    background-color: rgba(160, 160, 160, 0.2);
     overflow-x: hidden;
     overflow-y: auto;
 }
