--- a/src/components/Thong_tin/Thong_tin.module.scss
+++ b/src/components/Thong_tin/Thong_tin.module.scss
@@ -2,14 +2,19 @@
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    margin: 12px
+    margin: 12px 12px,
 }
 
-.text-content{
-    margin: 10px 24px;
+.text-content {
+
+    align-items: center;
+    align-content: center;
+    display: flex;
+    justify-content: center;
     
-    span{
-        border-bottom: 1px solid wheat;
+    padding: 12px 12px;
+
+    span {
         color: green;
     }
 }
