--- a/src/components/Dinh_muc/Dinh_muc.module.scss
+++ b/src/components/Dinh_muc/Dinh_muc.module.scss
@@ -92,9 +92,9 @@
 }
 
 .margin-content {
-    margin-left: 20%;
+    margin-left: -0.2%;
 
-    .card{
+    .card {
         margin: 10px 10px;
     }
 }
@@ -156,8 +156,37 @@
     margin: 12px 12px;
     color: rgb(175, 49, 49);
 
-    span {
-        margin: 12px 0;
-        color: rgb(11, 14, 12);
+    
+    >span {
+        text-align: center;
+        color: #00e40b;
+        font-weight: 500;
+        line-height: 1.2;
+    }
+
+    >span:nth-child(1) {
+        flex-basis: 40%; 
+        text-align: left;
+        font-size: 1.1em;
+        font-weight: 700;
+
+        svg {
+            margin-right: 5px;
+            color: #f02828;
+        }
+    }
+    >span:nth-child(2) {
+        font-weight: 1000;
+        flex-basis: 30%;
+        text-align: center;
+        font-size: 0.9em;
+        color: #7a0303;
+    }
+
+    >span:nth-child(3) {
+        flex-basis: 30%;
+        text-align: right;
+        font-size: 1.1em;
+        font-weight: 700;
     }
 }
