--- a/src/components/Muc_chi_tieu/Muc_chi_tieu_giai_tri/Muc_chi_tieu_giai_tri.module.scss
+++ b/src/components/Muc_chi_tieu/Muc_chi_tieu_giai_tri/Muc_chi_tieu_giai_tri.module.scss
@@ -6,12 +6,47 @@
 }
 
 .wrapper-content {
+    display: flex;
     margin: 12px 12px;
     color: rgb(175, 49, 49);
+    width: 100%;
 
-    span {
-        margin: 12px 0;
-        color: rgb(11, 14, 12);
+    >span {
+        text-align: center;
+        font-weight: 500;
+        line-height: 1.2;
+    }
+
+    >span:nth-child(1) {
+        flex-basis: 40%;
+        text-align: left;
+        font-size: 1.1em;
+        font-weight: 700;
+        text-align: start;
+        color: green;
+
+        svg {
+            margin-right: 5px;
+            color: #f02828;
+        }
+    }
+
+    >span:nth-child(2) {
+        font-weight: 1000;
+        flex-basis: 30%;
+        text-align: center;
+        font-size: 1.1em;
+        color: #7a0303;
+        text-align: center;
+    }
+
+    >span:nth-child(3) {
+        text-align: end;
+        flex-basis: 30%;
+        text-align: right;
+        font-size: 1.1em;
+        font-weight: 700;
+        color: black;
     }
 
 }
