date : 16/11/2025 update trang_chu + tong_quan

--- a/src/cong_cu/TextProfile/TextProfile.module.scss
+++ b/src/cong_cu/TextProfile/TextProfile.module.scss
@@ -49,6 +49,12 @@
 
 .text-email {}
 
-.text-sodu {}
+.text-sodu {
+    font-weight: 600;
+    color: green;
+}
 
-.text-dasudung {}
+.text-dasudung {
+    color: red;
+    font-weight: 600;
+}
