--- a/src/components/Tong_quan/Tong_quan.module.scss
+++ b/src/components/Tong_quan/Tong_quan.module.scss
@@ -2,10 +2,57 @@
     width: 100%;
     height: 80%;
     padding: 24px 24px
+}
+
+.wrapper-content {
+    display: flex;
+    width: 100%;
+    flex-direction: row;
+    gap: 20px;
+    margin: 24px 24px;
+    justify-content: space-between;
+
+    >div:nth-child(2) {
+        >div {
+            margin: 12px 12px;
+            font-weight: 600;
+            >span {
+                color: green;
+                font-weight: 600;
+            }
+        }
+    }
 
 }
 
-.wrapper-bieu-do{
+.wrapper-bieu-do {
     display: flex;
     width: 100%;
+}
+
+.tong-quan-text {
+    display: flex;
+    flex-direction: column;
+    padding: 12px;
+    border-radius: 12px;
+
+    h3 {
+        font-size: 1.3rem;
+        margin-bottom: 12px;
+        color: #333;
+        border-bottom: 2px solid #f0f0f0;
+        padding-bottom: 6px;
+    }
+
+    div {
+        font-size: 1rem;
+        margin-bottom: 8px;
+        color: #555;
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        font-weight: 600;
+        padding: 12px 12px;
+
+    }
 }
