--- a/src/components/Trang_chu/Trang_chu.module.scss
+++ b/src/components/Trang_chu/Trang_chu.module.scss
@@ -19,3 +19,71 @@
     font-weight: 600;
     color: red;
 }
+
+.gioi-thieu-wrapper {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    box-shadow: 0 4px 12px rgba(0, 0, 0, 0.08);
+    margin: 24px auto;
+
+    h1 {
+        font-size: 28px;
+        font-family: Arial, Helvetica, sans-serif;
+        font-weight: 600;
+        margin-bottom: 16px;
+        color: #333;
+    }
+
+    >div {
+        display: flex;
+        flex-direction: column;
+        gap: 6px;
+        font-size: 14px;
+        line-height: 1.6;
+        color: #555;
+
+        >div {
+            border-bottom: 1px solid rgba(172, 169, 165, 0.6);
+        }
+    }
+}
+
+.xin-chao {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 24px 16px;
+    border-radius: 12px;
+    max-width: 400px;
+    margin: 24px auto;
+
+    h1 {
+        font-family: Arial, Helvetica, sans-serif;
+        font-size: 28px;
+        font-weight: 600;
+        color: #333;
+        margin-bottom: 12px;
+
+    }
+
+    h3 {
+        font-family: 'Times New Roman', Times, serif;
+        font-size: 40px;
+        font-weight: 1000;
+        color: #555;
+        margin: 0;
+        background: linear-gradient(90deg, #4b34d1, #ccc266);
+        -webkit-background-clip: text;
+        -webkit-text-fill-color: transparent;
+
+        text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.2);
+
+    }
+
+    div {
+        margin-top: 8px;
+    }
+}
