--- a/src/cong_cu/Card/Card.module.scss
+++ b/src/cong_cu/Card/Card.module.scss
@@ -36,7 +36,8 @@
     overflow-y: auto;
     border-radius: 12px;
     display: flex;
-    justify-content: flex-start;
+    justify-content: center;
+    align-items: center;
     margin: 12px 24px;
     background: #fff;
     box-shadow: 0 2px 6px rgba(0, 0, 0, 0.08);
@@ -64,7 +65,24 @@
     &:hover::before {
         left: 125%;
     }
+
+    >div {
+        text-align: center;
+        max-width: 90%;
+        word-wrap: break-word;
+        white-space: normal;
+        color: #333;
+        font-size: 14px;
+        line-height: 1.4;
+        font-weight: 600;
+
+        >div:nth-child(2) {
+            color: rgb(80, 218, 80);
+        }
+    }
+
 }
+
 
 
 .wrapper-content {
