--- a/src/layouts/DefaultLayout/DefaultLayout.module.scss
+++ b/src/layouts/DefaultLayout/DefaultLayout.module.scss
@@ -3,6 +3,7 @@
     margin: 0;
     padding: 0;
 
+    --default-layout-header-height: 58px;
     --primary: red;
     --good: green;
 }
@@ -27,9 +28,10 @@
     flex: 1;
     display: flex;
     flex-direction: column;
-    border-right: 1px solid rgb(233, 233, 221);
+    border-right: 2px solid rgba(201, 199, 199, 0.75);
     overflow-y: auto;
     flex-shrink: 0;
+    background-color: rgba(207, 207, 207, 0.6);
 
     position: sticky;
     top: var(--default-layout-header-height);
