--- a/src/layouts/Header/Header.module.scss
+++ b/src/layouts/Header/Header.module.scss
@@ -4,16 +4,32 @@
   left: 0;
   width: 100%;
   height: var(--default-layout-header-height);
-  background-color: rgba(205, 221, 197, 0.75);
+  background-color: rgba(1, 6, 36, 0.95);
   z-index: 1000;
   border: 1px solid rgb(173, 173, 173);
+
 }
 
 .avatar {
-  position: absolute;
-  left: 80%;
-  top: 30%;
+  display: flex;
+  justify-content: space-between;
+  width: 959, 2px;
   transform: translateY(-50%);
+  align-items: center;
+  align-content: center;
+  text-align: center;
+
+
+  >div:nth-child(1) {
+    width: 400px;
+    display: flex;
+    flex-direction: row;
+    font-size: 2.4rem;
+    color: rgb(255, 254, 251);
+    margin-top: 3.5%;
+    margin-left: 10px;
+    font-family: 'Times New Roman', Times, serif;
+  }
 }
 
 .avatar-wrapper {
@@ -31,12 +47,16 @@
 }
 
 .avatar-name {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 19px;
+  margin-left: 640px;
+  margin-top: 18px;
   position: fixed;
   min-width: 200px;
-  font-size: 16px;
   font-weight: 500;
-  color: #333;
+  color: #ffffff;
   cursor: pointer;
+  justify-content: end;
 }
 
 .dang-xuat-layout {
@@ -46,14 +66,17 @@
 }
 
 // avatar
+
+
 .avatar-wrapper {
   position: relative;
   width: 100%;
+
 }
 
 .content-avatar {
   position: absolute;
-  min-width: 200px;
+  width: 600px;
 }
 
 @keyframes fadeIn {
