date: 22/11/2025 fix UI

--- a/src/components/Muc_chi_tieu/Muc_chi_tieu_giai_tri/Muc_chi_tieu_giai_tri.module.scss
+++ b/src/components/Muc_chi_tieu/Muc_chi_tieu_giai_tri/Muc_chi_tieu_giai_tri.module.scss
@@ -7,7 +7,7 @@
 
 .wrapper-content {
     display: flex;
-    margin: 12px 12px;
+    height: 100%;
     color: rgb(175, 49, 49);
     width: 100%;
 
