--- a/src/components/Trang_chu/Trang_chu.module.scss
+++ b/src/components/Trang_chu/Trang_chu.module.scss
@@ -37,6 +37,7 @@
     }
 
     >div {
+        padding: 12px 12px;
         display: flex;
         flex-direction: column;
         gap: 6px;
@@ -87,3 +88,37 @@
         margin-top: 8px;
     }
 }
+
+.more-select {
+    >button {
+        border: none;
+        margin-top: 24px;
+        margin-left: 24px;
+        margin-bottom: -12px;
+        font-size: 22px;
+        cursor: pointer;
+        transition: all 0.3s ease;
+
+        display: flex;
+        align-items: center;
+        justify-content: center;
+
+        &:hover {
+            transform: translateY(-2px);
+        }
+
+        &:active {
+            transform: scale(0.92);
+        }
+    }
+
+    .rotate {
+        animation: rotate90 0.35s ease forwards;
+    }
+}
+
+.option{
+    display: flex;
+}
+
+
