--- a/src/cong_cu/Loading/Loading.module.scss
+++ b/src/cong_cu/Loading/Loading.module.scss
@@ -1,15 +1,21 @@
 .wrapper-loading {
-  width: 100%;
-  height: 100%;           
-  display: flex;          
+  position: fixed;             
+  top: 0;
+  left: 0;
+  width: 100vw;               
+  height: 100vh;
+  color: rgba(196, 206, 206,0.4);
+  display: flex;
   justify-content: center;
-  align-items: center;    
-  font-size: 100px;
-  margin-top: 20%;
-  animation: spin 0.5s linear  infinite;
+  align-items: center;
+  font-size: 80px; 
+  z-index: 1;                
+  animation: spin 0.6s linear infinite;
+
+  overflow: hidden;
 }
 
 @keyframes spin {
   from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+  to { transform: rotate(180deg); }
 }
