date:23/12/2025 fix ui + ngayTao + fix thu muc

--- a/src/alert/Xac_nhan/Xac_nhan.module.scss
+++ b/src/alert/Xac_nhan/Xac_nhan.module.scss
@@ -3,6 +3,7 @@
     align-items: center;
     align-content: center;
     position: fixed;
+    margin-top: 8%;
     left: 40%;
     min-width: 400px;
     min-height: 200px;
