--- a/src/Component_chung/ChiTieu/ChiTieu_component.module.scss
+++ b/src/Component_chung/ChiTieu/ChiTieu_component.module.scss
@@ -48,4 +48,14 @@
         font-weight: 700;
         color: black;
     }
+
+    span:nth-child(4) {
+        margin: 10px 12px;
+        text-align: end;
+        flex-basis: 30%;
+        text-align: right;
+        font-size: 10px;
+        font-weight: 400;
+        color: black;
+    }
 }
