--- a/src/Component_chung/LocChiTieu/LocChiTieu.module.scss
+++ b/src/Component_chung/LocChiTieu/LocChiTieu.module.scss
@@ -1,13 +1,6 @@
-.wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    margin: 12px 12px;
-}
-
 .wrapper-content {
     display: flex;
-    height: 100%;
+    margin: 12px 12px;
     color: rgb(175, 49, 49);
     width: 100%;
 
@@ -49,4 +42,13 @@
         color: black;
     }
 
+    span:nth-child(4) {
+        margin: 10px 12px;
+        text-align: end;
+        flex-basis: 30%;
+        text-align: right;
+        font-size: 10px;
+        font-weight: 400;
+        color: black;
+    }
 }
