--- a/src/Tro_nang/Them_sua_xoa_dinh_muc/Them_sua_xoa_dinh_muc.module.scss
+++ b/src/Tro_nang/Them_sua_xoa_dinh_muc/Them_sua_xoa_dinh_muc.module.scss
@@ -2,6 +2,7 @@
     position: fixed;
     z-index: 1000;
     width: 30%;
+    margin-top: 6%;
     height: 340px;
     align-items: center;
     margin-left: 26%;
