--- a/src/cong_cu/Text_chi_tieu/Text_chi_tieu.module.scss
+++ b/src/cong_cu/Text_chi_tieu/Text_chi_tieu.module.scss
@@ -50,21 +50,24 @@
 }
 
 .input-page {
+    position: sticky;
     text-align: center;
     margin: 12px 12px;
     margin-bottom: 30px;
     width: 100%;
     height: 50px;
+    z-index: 1;
     padding: 0 10px;
     user-select: none;
 }
 
 .input-submit {
-    height: 200px;
+    height: 280px;
+    margin-left: 20%;
     display: flex;
     flex-direction: column;
     margin-top: 24px;
-    width: 100%;
+    width: 60%;
     flex: 1;
 }
 
