--- a/src/Component_chung/LocChiTieu/LocChiTieu.module.scss
+++ b/src/Component_chung/LocChiTieu/LocChiTieu.module.scss
@@ -1,54 +1,36 @@
-.wrapper-content {
-    display: flex;
-    margin: 12px 12px;
-    color: rgb(175, 49, 49);
+.wrapper {
+    box-shadow: 0 8px 24px rgba(0, 0, 0, 0.2);
+    background-color: #ccc6c6;
     width: 100%;
+    max-width: 800px;
+    margin: 24px auto;
+    padding: 16px;
+    border-radius: 12px;
+    display: flex;
+    flex-direction: column;
+    gap: 12px;
+    overflow-y: auto;
 
-    >span {
-        text-align: center;
-        font-weight: 500;
-        line-height: 1.2;
-    }
+    .wrapper-content {
+        display: flex;
+        justify-content: space-between;
+        align-items: center;
+        padding: 12px 16px;
+        border-radius: 8px;
+        gap: 8px;
+        min-height: 50px;
+        flex-wrap: wrap;
 
-    >span:nth-child(1) {
-        flex-basis: 40%;
-        text-align: left;
-        font-size: 1.1em;
-        font-weight: 700;
-        text-align: start;
-        color: green;
-
-        svg {
-            margin-right: 5px;
-            color: #f02828;
+        >span {
+            flex: 1;
+            text-align: center;
+            font-weight: 500;
+            overflow: hidden;
+            text-overflow: ellipsis;
+            white-space: nowrap;
+            padding: 4px 8px;
+            border-radius: 4px;
+            color: white;
         }
-    }
-
-    >span:nth-child(2) {
-        font-weight: 1000;
-        flex-basis: 30%;
-        text-align: center;
-        font-size: 1.1em;
-        color: #7a0303;
-        text-align: center;
-    }
-
-    >span:nth-child(3) {
-        text-align: end;
-        flex-basis: 30%;
-        text-align: right;
-        font-size: 1.1em;
-        font-weight: 700;
-        color: black;
-    }
-
-    span:nth-child(4) {
-        margin: 10px 12px;
-        text-align: end;
-        flex-basis: 30%;
-        text-align: right;
-        font-size: 10px;
-        font-weight: 400;
-        color: black;
     }
 }
